--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>以撒的结合-道具寻访</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="assets/isaac_Icon.webp">
 </head>
 <body>
   <header id="topbar" class="topbar">
@@ -40,3 +41,4 @@
   <script src="pools/sample/pool.js"></script>
 </body>
 </html>
+
