--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>以撒的结合-道具寻访</title>
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="assets/isaac_Icon.webp">
 </head>
 <body>
   <header id="topbar" class="topbar">
@@ -38,7 +37,13 @@
   <script src="js/main.js"></script>
   <!-- 注册各卡池模块（模块化：在 pools 目录下写多个文件并在这里引入） -->
   <script src="pools/newbie/pool.js"></script>
-  <script src="pools/sample/pool.js"></script>
+  <script src="pools/electric/pool.js"></script>
+  <script src="pools/knife/pool.js"></script>
+  <script src="pools/eater/pool.js"></script>
+  <script src="pools/devil/pool.js"></script>
+  <script src="pools/homie/pool.js"></script>
+  <script src="pools/lilith/pool.js"></script>
+  <script src="pools/select2025/pool.js"></script>
+  <script src="pools/newyear2025/pool.js"></script>
 </body>
 </html>
-
